fix(calendar): fixed issue with smooth scroll on ios device

--- a/web-components/packages/zcui-wc-calendar/src/cal/index.scss
+++ b/web-components/packages/zcui-wc-calendar/src/cal/index.scss
@@ -1,4 +1,5 @@
 .cal-wrapper {
+    scroll-behavior: smooth;
     position: absolute;
     z-index: 2;
     height: 325px;
@@ -51,10 +52,10 @@
         width: 75%;
     }
     .done{
-        left: 75%;
         margin: 0;
         margin-top: 6px;
-        margin-left: 3%;
+        width: 23%;
+        text-align: center;
         background: transparent;
     }
     .time-wrapper {
